src/test/deca/context/valid/Objet/Cast-Up.deca
// Description:
//      Casting up
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
}

{
    B b = new B();
    A a = (A) (b);
}
